[workspace]
members = ["color-palette", "starfield", "utilities"]

[package]
name = "railroad-handcar"
version = "0.1.0"
edition = "2021"

[dependencies]

[workspace.dependencies]
p5-sys = "0.1.1"
rand = "0.8.5"
wasm-bindgen = "0.2.92"
color-palette = { path = "./color-palette" }
utilities = { path = "./utilities" }
