[workspace]
members = ["color-palette", "menger-sponge", "snake", "starfield", "utilities"]

[package]
name = "railroad-handcar"
version = "0.1.0"
edition = "2021"

[dependencies]


[workspace.dependencies]
macroquad = "0.4.5"
color-palette = { path = "./color-palette" }
utilities = { path = "./utilities" }
